# ml4DVar

./: .gitignore  LICENSE  README.md  calc_B.py  check_background_errs.ipynb  climaX_perturb.ipynb  climaX_perturb.py  environment.yml  launch_da.sh  launch_master_da.sh  launch_multi_da.sh  launch_multi_da_config.sh  launch_multi_da_config_dense.sh  launch_multi_da_config_dense_Binf.sh  launch_multi_da_config_sparse.sh  launch_multi_da_era5B.sh  launch_multi_master_da.sh  plot_loss.py  plot_results.ipynb  plot_vsera5.py  plotting_da.py  pyproject.toml  read_json.py  residual_test.py  run_3dvar.py  run_4dvar.py  run_da.py  run_da_era5.py  run_da_era5_from_config.py  run_da_from_config.py  test_obs.py  test_plotting.py  test_plotting_obs.py  vars_climaX.py
climaX/: climaX_forecast_plot.ipynb  climaX_longForecast.ipynb  climaX_longForecast.py  climaX_perturb.ipynb  climaX_perturb.py  climax_utils.py  climax_val_forecast.py  launch_climax_forecast.sh  launch_master_climax_forecast.sh  varsClimaX.py  vars_climaX.py
configs/: var3d_4cellGrid_12lt_windVec.yml  var3d_4cellGrid_12lt_windVec2.yml  var3d_4cellGrid_windVec.yml  var3d_4cellGrid_windVec2.yml  var3d_4cellgrid_GTNMC_uvScalar.yml  var3d_4cellgrid_GTNMC_uvVector.yml  var3d_4cellgrid_GTuv_GTNMC_bhf1e6.yml  var3d_4cellgrid_GTuv_modelvsGT_bhf1.yml  var3d_4cellgrid_GTuv_modelvsGT_bhf1e12.yml  var3d_4cellgrid_GTuv_modelvsGT_bhf1e6.yml  var3d_4cellgrid_modelNMC_uvScalar.yml  var3d_4cellgrid_modelvsGTNMC_uvScalar.yml  var3d_4cellgrid_modelvsGT_uvScalar_bhf1e12.yml  var3d_4cellgrid_modelvsGT_uvScalar_bhf1e6.yml  (+25 more)
src/: 4d_var.py  (+13 more)
(+56 files in other folders)
